--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://saudcodes.github.io./npm install gh-pageFirst-React-project",
+  "homepage": "http://saudcodes.github.io./First-React-project",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
